v1/readme.md
#YelpCamp

* Add Landing Page
* Add Campgrounds Page that lists all campgrounds

Each Campground has:
  * Name
  * Image

  [
    {name:"Salmon Creek", image: "http://www.image.com"},
    {name:"Salmon Creek", image: "http://www.image.com"},
    {name:"Salmon Creek", image: "http://www.image.com"},
    {name:"Salmon Creek", image: "http://www.image.com"},
    {name:"Salmon Creek", image: "http://www.image.com"},
    {name:"Salmon Creek", image: "http://www.image.com"}
  ]

#Creating New Campgrounds
  * Setup new campground Post route
  * Add in body-parser
  * Setup route to show form
  * Add basic unstyled form

#Style the campgrounds page
  * Add a better header/title
  * Make campgrounds display in a grid

#Style the Navbar and Form
  * Add a navbar to all templates
  * Style the new campground form

#Add Mongoose
  * Install and configure mongoose
  * Setup campground model
  * Use campground model inside of our routes!